--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,7 @@
    <target name="init">
       <property name="sourceDir" value="src" />
       <property name="outputDir" value="classes" />
+      <property name="jars" value="jar/json.jar" />
    </target>
    <target name="clean" depends="init">
       <deltree dir="${outputDir}" />
@@ -10,6 +11,6 @@
       <mkdir dir="${outputDir}" />
    </target>
    <target name="compile" depends="prepare">
-     <javac srcdir="${sourceDir}" destdir="${outputDir}" />
+     <javac srcdir="${sourceDir}" destdir="${outputDir}" classpath="${jars}"/>
    </target>
 </project>
